syntax = "proto3";

package smartcore.bos;

option go_package = "github.com/smart-core-os/sc-bos/pkg/gen";

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "types/time/period.proto";
import "traits/occupancy_sensor.proto";

// OccupancySensorHistory provides access to historical records for smartcore.traits.OccupancySensorApi service resources.
service OccupancySensorHistory {
  rpc ListOccupancyHistory(ListOccupancyHistoryRequest) returns (ListOccupancyHistoryResponse);
}

message OccupancyRecord {
  smartcore.traits.Occupancy occupancy = 1;
  google.protobuf.Timestamp record_time = 2;
}

message ListOccupancyHistoryRequest {
  string name = 1;
  smartcore.types.time.Period period = 2;

  // Fields to fetch relative to the OccupancyRecord type
  google.protobuf.FieldMask read_mask = 3;
  // The maximum number of devices to return.
  // The service may return fewer than this value.
  // If unspecified, at most 50 items will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 4;
  // A page token, received from a previous `ListOccupancyHistoryResponse` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 5;
  // Specify the order of the returned records.
  // The default is `record_time asc` - aka oldest record first.
  // The format is `field_name [asc|desc]`, with asc being the default.
  // Only `record_time` is supported.
  string order_by = 6;
}

message ListOccupancyHistoryResponse {
  repeated OccupancyRecord occupancy_records = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
  // If non-zero this is the total number of records matched by the query.
  // This may be an estimate.
  int32 total_size = 3;
}
